--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Agenda\n",
+    "\n",
+    "1. Inheritance\n",
+    "2. Magic methods (`__del__`)\n",
+    "3. Object system\n",
+    "4. Metaclasses\n",
+    "5. Iterators etc. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,7 +23,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -24,7 +37,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
