--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -15,10 +15,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, name1!\n",
+      "Hello, name2!\n",
+      "Hello, emp1!\n",
+      "Hello, emp2!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Person:\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}!'\n",
+    "    \n",
+    "p1 = Person('name1')    \n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet()) \n",
+    "print(p2.greet()) \n",
+    "\n",
+    "class Employee(Person):    # Employee is-a Person, i.e., inherits from Person\n",
+    "\n",
+    "    def __init__(self, name, id_number):\n",
+    "        super().__init__(name)        # do what my parent does in __init__...\n",
+    "        self.id_number = id_number    # add my own things\n",
+    "            \n",
+    "e1 = Employee('emp1', 1)# e1 has __init__? no. Empoyee has __init__? Yes \n",
+    "e2 = Employee('emp2', 2)\n",
+    "\n",
+    "print(e1.greet()) # e1 has greet? No. Employee has greet? No. Person has greet? yes\n",
+    "print(e2.greet()) \n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# attribute search -- ICPO \n",
+    "# "
+   ]
   }
  ],
  "metadata": {
