--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -48,10 +48,11 @@
     "class Employee(Person):    # Employee is-a Person, i.e., inherits from Person\n",
     "\n",
     "    def __init__(self, name, id_number):\n",
+    "        # Person.__init__(self, name) \n",
     "        super().__init__(name)        # do what my parent does in __init__...\n",
     "        self.id_number = id_number    # add my own things\n",
     "            \n",
-    "e1 = Employee('emp1', 1)# e1 has __init__? no. Empoyee has __init__? Yes \n",
+    "e1 = Employee('emp1', 1)# e1 has __init__? no. Employee has __init__? Yes \n",
     "e2 = Employee('emp2', 2)\n",
     "\n",
     "print(e1.greet()) # e1 has greet? No. Employee has greet? No. Person has greet? yes\n",
