--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -61,13 +61,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# attribute search -- ICPO \n",
-    "# "
+    "# Inheritance\n",
+    "\n",
+    "All inheritance is based on the search for attributes. When we look for an attribute in a Python object (an instance, that is), Python searches in the following order:\n",
+    "\n",
+    "- i -- the instance itself\n",
+    "- c -- the class of the instance (`type(i)`)\n",
+    "- p -- the parent of the class\n",
+    "- o -- `object`, the to o"
    ]
   }
  ],
