--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -71,7 +71,14 @@
     "- i -- the instance itself\n",
     "- c -- the class of the instance (`type(i)`)\n",
     "- p -- the parent of the class\n",
-    "- o -- `object`, the to o"
+    "- o -- `object`, the top object in the class\n",
+    "\n",
+    "This means, in practice:\n",
+    "\n",
+    "- If we have the same method in both a child class and a parent class, then we can remove the child class implementation, and rely on the parent class\n",
+    "- If we write a method in the child class, then that takes priority, and the parent class's method is never run.\n",
+    "- If we want to combine the method in the child class with the parent class, then we have a few options:\n",
+    "    1. "
    ]
   }
  ],
