--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -78,7 +78,9 @@
     "- If we have the same method in both a child class and a parent class, then we can remove the child class implementation, and rely on the parent class\n",
     "- If we write a method in the child class, then that takes priority, and the parent class's method is never run.\n",
     "- If we want to combine the method in the child class with the parent class, then we have a few options:\n",
-    "    1. "
+    "    1. Copy the code from the parent class into the child class. There are a number of problems with doing it this way -- not recommended.\n",
+    "    2. Call the parent method explicitly (`Class.method(self, arg1)`). This way, the parent class gets to run first, and then we add functionality in the child class.\n",
+    "    3. The most modern way is to use `super`, as in `super().method(arg1)`. We don't need to pass `self` here! Once again, we normally do this at first in the "
    ]
   }
  ],
