--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -80,8 +80,16 @@
     "- If we want to combine the method in the child class with the parent class, then we have a few options:\n",
     "    1. Copy the code from the parent class into the child class. There are a number of problems with doing it this way -- not recommended.\n",
     "    2. Call the parent method explicitly (`Class.method(self, arg1)`). This way, the parent class gets to run first, and then we add functionality in the child class.\n",
-    "    3. The most modern way is to use `super`, as in `super().method(arg1)`. We don't need to pass `self` here! Once again, we normally do this at first in the "
+    "    3. The most modern way is to use `super`, as in `super().method(arg1)`. We don't need to pass `self` here! Once again, we normally do this at first in the method, and then have more specific instructions in our method.\n",
+    " \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
