--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -86,10 +86,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class First:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    def x2(self):\n",
+    "        return self.x * 2\n",
+    "\n",
+    "class Second:\n",
+    "    def __init__(self, y):\n",
+    "        self.y = y\n",
+    "\n",
+    "    def y3(self):\n",
+    "        return self.y * 3\n",
+    "\n",
+    "class Third(First, Second):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(object,)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# who does Person inherit from?  We can always check __bases__\n",
+    "Person.__bases__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(__main__.Person, object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What about Person's MRO (method resolution order)\n",
+    "Person.__mro__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(__main__.Person,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Employee.__bases__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Em"
+   ]
   }
  ],
  "metadata": {
