--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -431,7 +431,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class First:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    def x2(self):\n",
+    "        return self.x * 2\n",
+    "\n",
+    "class Second:\n",
+    "    def __init__(self, y):\n",
+    "        self.y = y\n",
+    "\n",
+    "    def y3(self):\n",
+    "        return self.y * 3\n",
+    "\n",
+    "class Third(First, Second):\n",
+    "    def __init__(self, x, y):\n",
+    "        First.__init__(self, x)\n",
+    "        Second.__init__(self, y)"
+   ]
   }
  ],
  "metadata": {
