--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -448,9 +448,82 @@
     "\n",
     "class Third(First, Second):\n",
     "    def __init__(self, x, y):\n",
-    "        First.__init__(self, x)\n",
-    "        Second.__init__(self, y)"
+    "        super().__init__(self, x)\n",
+    "        # First.__init__(self, x)\n",
+    "        # Second.__init__(self, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class super in module builtins:\n",
+      "\n",
+      "class super(object)\n",
+      " |  super() -> same as super(__class__, <first argument>)\n",
+      " |  super(type) -> unbound super object\n",
+      " |  super(type, obj) -> bound super object; requires isinstance(obj, type)\n",
+      " |  super(type, type2) -> bound super object; requires issubclass(type2, type)\n",
+      " |  Typical use to call a cooperative superclass method:\n",
+      " |  class C(B):\n",
+      " |      def meth(self, arg):\n",
+      " |          super().meth(arg)\n",
+      " |  This works for class methods too:\n",
+      " |  class C(B):\n",
+      " |      @classmethod\n",
+      " |      def cmeth(cls, arg):\n",
+      " |          super().cmeth(arg)\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __get__(self, instance, owner=None, /)\n",
+      " |      Return an attribute of instance, which is of type owner.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __self__\n",
+      " |      the instance invoking super(); may be None\n",
+      " |  \n",
+      " |  __self_class__\n",
+      " |      the type of the instance invoking super(); may be None\n",
+      " |  \n",
+      " |  __thisclass__\n",
+      " |      the class invoking super()\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(super)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
