--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -520,10 +520,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class First:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    def x2(self):\n",
+    "        return self.x * 2\n",
+    "\n",
+    "class Second(First):\n",
+    "    def __init__(self, y):\n",
+    "        self.y = y\n",
+    "\n",
+    "    def y3(self):\n",
+    "        return self.y * 3\n",
+    "\n",
+    "class Third(Second):\n",
+    "    def __init__(self, x, y):\n",
+    "        super().__init__(self, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Third"
+   ]
   }
  ],
  "metadata": {
