--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,14 +533,24 @@
     "\n",
     "class Second(First):\n",
     "    def __init__(self, y):\n",
+    "        super().__init__(y)\n",
     "        self.y = y\n",
     "\n",
     "    def y3(self):\n",
     "        return self.y * 3\n",
     "\n",
     "class Third(Second):\n",
-    "    def __init__(self, x, y):\n",
-    "        super().__init__(self, x)"
+    "    def __init__(self, x):\n",
+    "        super().__init__(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = Third(17)"
    ]
   },
   {
@@ -548,9 +558,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Third"
-   ]
+   "source": []
   }
  ],
  "metadata": {
