--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -604,13 +604,14 @@
        "'<__main__.Third object at 0x11237db10>'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str(t)"
+    "str(t) # __str__() on t? No. __str__ on Third? No. __str__ on Second? no. __str__ on First? No.\n",
+    "       # ___str__ on object? Yes!"
    ]
   },
   {
@@ -631,6 +632,46 @@
    ],
    "source": [
     "0x11237db10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4600617744"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<__main__.Third object at 0x11237db10>'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "object.__str__(t)"
    ]
   },
   {
