--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -786,7 +786,14 @@
     }
    ],
    "source": [
-    "print(t)"
+    "print(t)  # when I run print, it really runs print(str(ARG)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: "
    ]
   },
   {
@@ -794,7 +801,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Scoop:\n",
+    "    def __init__(self, flavor):\n",
+    "        self.flavor = flavor\n",
+    "        \n",
+    "class Bowl:\n",
+    "    MAX_SCOOPS = 3\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "        \n",
+    "    def add_scoops(self, *new_scoops):\n",
+    "        for one_scoop in new_scoops:\n",
+    "            if len(self.scoops) < Bowl.MAX_SCOOPS:\n",
+    "                self.scoops.append(one_scoop)\n",
+    "            \n",
+    "    def flavors(self):\n",
+    "        \n",
+    "        return [one_scoop.flavor\n",
+    "               for one_scoop in self.scoops]\n",
+    "\n",
+    "s1 = Scoop('chocolate')\n",
+    "s2 = Scoop('vanilla')\n",
+    "s3 = Scoop('coffee')\n",
+    "s4 = Scoop('flavor 4')\n",
+    "s5 = Scoop('flavor 5')\n",
+    "\n",
+    "b = Bowl()\n",
+    "b.add_scoops(s1, s2)\n",
+    "b.add_scoops(s3)\n",
+    "b.add_scoops(s4, s5)\n",
+    "print(b.flavors()) "
+   ]
   }
  ],
  "metadata": {
