--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -793,7 +793,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise: "
+    "# Exercise: Big Bowl\n",
+    "\n",
+    "A big bowl is just like a bowl, but takes up to 5 scoops, not just 3. Define `BigBowl` while making as few changes to `Bowl` as possible, and also writing as little code as possible."
    ]
   },
   {
