--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -800,9 +800,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chocolate', 'vanilla', 'coffee']\n"
+     ]
+    }
+   ],
    "source": [
     "class Scoop:\n",
     "    def __init__(self, flavor):\n",
@@ -836,6 +844,13 @@
     "b.add_scoops(s4, s5)\n",
     "print(b.flavors()) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
