--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -800,14 +800,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['chocolate', 'vanilla', 'coffee']\n"
+      "['chocolate', 'vanilla', 'coffee']\n",
+      "['chocolate', 'vanilla', 'coffee', 'flavor 4', 'flavor 5']\n"
      ]
     }
    ],
@@ -832,6 +833,22 @@
     "        return [one_scoop.flavor\n",
     "               for one_scoop in self.scoops]\n",
     "\n",
+    "class BigBowl(Bowl):\n",
+    "    MAX_SCOOPS = 5\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "        \n",
+    "    def add_scoops(self, *new_scoops):\n",
+    "        for one_scoop in new_scoops:\n",
+    "            if len(self.scoops) < BigBowl.MAX_SCOOPS:\n",
+    "                self.scoops.append(one_scoop)\n",
+    "            \n",
+    "    def flavors(self):\n",
+    "        \n",
+    "        return [one_scoop.flavor\n",
+    "               for one_scoop in self.scoops]\n",
+    "\n",
     "s1 = Scoop('chocolate')\n",
     "s2 = Scoop('vanilla')\n",
     "s3 = Scoop('coffee')\n",
@@ -842,7 +859,13 @@
     "b.add_scoops(s1, s2)\n",
     "b.add_scoops(s3)\n",
     "b.add_scoops(s4, s5)\n",
-    "print(b.flavors()) "
+    "print(b.flavors()) \n",
+    "\n",
+    "bb = BigBowl()\n",
+    "bb.add_scoops(s1, s2)\n",
+    "bb.add_scoops(s3)\n",
+    "bb.add_scoops(s4, s5)\n",
+    "print(bb.flavors()) "
    ]
   },
   {
