--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -825,30 +825,16 @@
     "        \n",
     "    def add_scoops(self, *new_scoops):\n",
     "        for one_scoop in new_scoops:\n",
-    "            if len(self.scoops) < Bowl.MAX_SCOOPS:\n",
+    "            if len(self.scoops) < self.MAX_SCOOPS:\n",
     "                self.scoops.append(one_scoop)\n",
     "            \n",
     "    def flavors(self):\n",
-    "        \n",
     "        return [one_scoop.flavor\n",
     "               for one_scoop in self.scoops]\n",
     "\n",
     "class BigBowl(Bowl):\n",
     "    MAX_SCOOPS = 5\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        self.scoops = []\n",
-    "        \n",
-    "    def add_scoops(self, *new_scoops):\n",
-    "        for one_scoop in new_scoops:\n",
-    "            if len(self.scoops) < BigBowl.MAX_SCOOPS:\n",
-    "                self.scoops.append(one_scoop)\n",
     "            \n",
-    "    def flavors(self):\n",
-    "        \n",
-    "        return [one_scoop.flavor\n",
-    "               for one_scoop in self.scoops]\n",
-    "\n",
     "s1 = Scoop('chocolate')\n",
     "s2 = Scoop('vanilla')\n",
     "s3 = Scoop('coffee')\n",
