--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -800,14 +800,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['chocolate', 'vanilla', 'coffee']\n",
+      "['chocolate', 'vanilla', 'coffee', 'flavor 4', 'flavor 5']\n",
       "['chocolate', 'vanilla', 'coffee', 'flavor 4', 'flavor 5']\n"
      ]
     }
@@ -833,7 +833,7 @@
     "               for one_scoop in self.scoops]\n",
     "\n",
     "class BigBowl(Bowl):\n",
-    "    MAX_SCOOPS = 5\n",
+    "    Bowl.MAX_SCOOPS = 5\n",
     "            \n",
     "s1 = Scoop('chocolate')\n",
     "s2 = Scoop('vanilla')\n",
