--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -855,6 +855,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Printing our ice cream\n",
+    "\n",
+    "1. Implement `__str__` on `Scoop` such that printing / calling `str` on an instance of `Scoop` returns a string like \"Scoop of chocolate\".\n",
+    "2. Implement `__str__` on `Bowl` such that printing / calling returns a string like:\n",
+    "\n",
+    "    Bowl of:\n",
+    "    1. Scoop of chocolate\n",
+    "    2. Scoop of vanilla\n",
+    "    3. Scoop of coffee\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
