--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -872,6 +872,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Scoop object at 0x1123852d0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1) # print(str(s1)) -> print(s1.__str__()) -> does s1 have __str__? No. Does Scoop have __str__? No.\n",
+    "          #         does object have __str__? Yes!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
