--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -816,6 +816,9 @@
     "class Scoop:\n",
     "    def __init__(self, flavor):\n",
     "        self.flavor = flavor\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f'Scoop of {self.flavor}'\n",
     "        \n",
     "class Bowl:\n",
     "    MAX_SCOOPS = 3\n",
