--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -834,6 +834,14 @@
     "    def flavors(self):\n",
     "        return [one_scoop.flavor\n",
     "               for one_scoop in self.scoops]\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        output = 'Bowl of: \\n'\n",
+    "\n",
+    "        for index, one_scoop in enumerate(self.scoops):\n",
+    "            output += f'\\t{one_scoop}\\n'\n",
+    "\n",
+    "        return output\n",
     "\n",
     "class BigBowl(Bowl):\n",
     "    MAX_SCOOPS = 5\n",
@@ -875,20 +883,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Scoop object at 0x1123852d0>\n"
+      "Scoop of chocolate\n"
      ]
     }
    ],
    "source": [
     "print(s1) # print(str(s1)) -> print(s1.__str__()) -> does s1 have __str__? No. Does Scoop have __str__? No.\n",
     "          #         does object have __str__? Yes!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bowl of: \n",
+      "\tScoop of chocolate\n",
+      "\tScoop of vanilla\n",
+      "\tScoop of coffee\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b)"
    ]
   },
   {
