--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -838,10 +838,13 @@
     "    def __str__(self):\n",
     "        output = 'Bowl of: \\n'\n",
     "\n",
-    "        for index, one_scoop in enumerate(self.scoops):\n",
-    "            output += f'\\t{one_scoop}\\n'\n",
+    "        # for index, one_scoop in enumerate(self.scoops, 1):\n",
+    "        #     output += f'\\t{index}: {one_scoop}\\n'\n",
     "\n",
-    "        return output\n",
+    "        # return output\n",
+    "\n",
+    "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
+    "                                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
     "\n",
     "class BigBowl(Bowl):\n",
     "    MAX_SCOOPS = 5\n",
@@ -883,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -909,9 +912,9 @@
      "output_type": "stream",
      "text": [
       "Bowl of: \n",
-      "\tScoop of chocolate\n",
-      "\tScoop of vanilla\n",
-      "\tScoop of coffee\n",
+      "\t1: Scoop of chocolate\n",
+      "\t2: Scoop of vanilla\n",
+      "\t3: Scoop of coffee\n",
       "\n"
      ]
     }
