--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -914,8 +914,7 @@
       "Bowl of: \n",
       "\t1: Scoop of chocolate\n",
       "\t2: Scoop of vanilla\n",
-      "\t3: Scoop of coffee\n",
-      "\n"
+      "\t3: Scoop of coffee\n"
      ]
     }
    ],
