--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -967,8 +967,23 @@
    "metadata": {},
    "source": [
     "# `__str__` and `__repr__`\n",
-    "\n"
+    "\n",
+    "These two methods both get `self` as an argument, and are both supposed to return a string.\n",
+    "\n",
+    "`__str__` is meant for end users, `__repr__` is meant for behind-the-scenes debugging and printing.\n",
+    "\n",
+    "- If I don't define `__repr__`, then I get the default.\n",
+    "- If I don't define `__str__`, but `__repr__` is defined, then it is used.\n",
+    "\n",
+    "I suggest always defining `__repr__`, and only defining `__str__` if and when you need."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
