--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
     "    def __init__(self, flavor):\n",
     "        self.flavor = flavor\n",
     "\n",
-    "    def __str__(self):\n",
+    "    def __repr__(self):\n",
     "        return f'Scoop of {self.flavor}'\n",
     "        \n",
     "class Bowl:\n",
@@ -835,7 +835,7 @@
     "        return [one_scoop.flavor\n",
     "               for one_scoop in self.scoops]\n",
     "\n",
-    "    def __str__(self):\n",
+    "    def __repr__(self):\n",
     "        output = 'Bowl of: \\n'\n",
     "\n",
     "        # for index, one_scoop in enumerate(self.scoops, 1):\n",
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -924,16 +924,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Scoop at 0x112359410>"
+       "Scoop of chocolate"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,16 +944,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Bowl at 0x1123587d0>"
+       "Bowl of: \n",
+       "\t1: Scoop of chocolate\n",
+       "\t2: Scoop of vanilla\n",
+       "\t3: Scoop of coffee"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,6 +987,55 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Scoop of chocolate'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "object.__str__(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<__main__.Scoop object at 0x112374910>'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "object.__repr__(s1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. Magic methods + overloading"
+   ]
   }
  ],
  "metadata": {
