--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1034,8 +1034,21 @@
    "source": [
     "# Next up\n",
     "\n",
-    "1. Magic methods + overloading"
+    "1. Magic methods + overloading\n",
+    "2. `__del__`\n",
+    "3. The Python object system\n",
+    "4. Metaclasses\n",
+    "5. Iteration\n",
+    "\n",
+    "Resume at :35"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
