--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1138,10 +1138,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 = MyClass('abcde')\n",
+    "m2 = MyClass('abcde')\n",
+    "\n",
+    "m1 == m2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# when we run ==, Python runs the __eq__"
+   ]
   }
  ],
  "metadata": {
