--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1161,12 +1161,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NotImplemented"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# when we run ==, Python runs the __eq__ method\n",
+    "# it runs the method on the left-side argument\n",
+    "\n",
+    "m1.__eq__(m2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NotImplementedType"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(NotImplemented)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.x)\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        return vars(self) == vars(other)\n",
+    "\n",
+    "m1 = MyClass('abcde')\n",
+    "m2 = MyClass('abcde')\n",
+    "\n",
+    "m1 == m2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# when we run ==, Python runs the __eq__"
-   ]
+   "source": []
   }
  ],
  "metadata": {
