--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
        "True"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,12 +1227,55 @@
     "        return len(self.x)\n",
     "\n",
     "    def __eq__(self, other):\n",
-    "        return vars(self) == vars(other)\n",
+    "        # return vars(self) == vars(other)\n",
+    "        if hasattr(other, 'x'):\n",
+    "            return self.x == other.x\n",
+    "        return False\n",
     "\n",
     "m1 = MyClass('abcde')\n",
     "m2 = MyClass('abcde')\n",
     "\n",
     "m1 == m2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 == 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100 == m1"
    ]
   },
   {
