--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1213,12 +1213,14 @@
        "True"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from functools import total_ordering\n",
+    "\n",
     "class MyClass:\n",
     "    def __init__(self, x):\n",
     "        self.x = x\n",
@@ -1232,6 +1234,11 @@
     "            return self.x == other.x\n",
     "        return False\n",
     "\n",
+    "    def __lt__(self, other):\n",
+    "        if hasattr(other, 'x'):\n",
+    "            return self.x < other.x\n",
+    "        return False\n",
+    "        \n",
     "m1 = MyClass('abcde')\n",
     "m2 = MyClass('abcde')\n",
     "\n",
@@ -1240,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1256,7 @@
        "False"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1269,13 +1276,35 @@
        "False"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "100 == m1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m3 = MyClass('bcdef')\n",
+    "\n",
+    "m1 < m3"
    ]
   },
   {
