--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
        "True"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,6 +1221,7 @@
    "source": [
     "from functools import total_ordering\n",
     "\n",
+    "@total_ordering    \n",
     "class MyClass:\n",
     "    def __init__(self, x):\n",
     "        self.x = x\n",
@@ -1247,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1257,7 @@
        "False"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1277,7 @@
        "False"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1297,7 @@
        "True"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,6 +1306,70 @@
     "m3 = MyClass('bcdef')\n",
     "\n",
     "m1 < m3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 >= m3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'MyClass' and 'MyClass'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[110], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# let's try addition!\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mm1\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mm2\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'MyClass' and 'MyClass'"
+     ]
+    }
+   ],
+   "source": [
+    "# let's try addition!\n",
+    "\n",
+    "m1 + m2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[111], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;241;43m10\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m20\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "10 + '20'"
    ]
   },
   {
