--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1374,6 +1374,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[112], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m10\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "'10' + 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.MyClass at 0x112885790>"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from functools import total_ordering\n",
+    "\n",
+    "@total_ordering    \n",
+    "class MyClass:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.x)\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        # return vars(self) == vars(other)\n",
+    "        if hasattr(other, 'x'):\n",
+    "            return self.x == other.x\n",
+    "        return False\n",
+    "\n",
+    "    def __lt__(self, other):\n",
+    "        if hasattr(other, 'x'):\n",
+    "            return self.x < other.x\n",
+    "        return False\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        if hasattr(other, 'x'):\n",
+    "            return MyClass(self.x + other.x)\n",
+    "        \n",
+    "m1 = MyClass('abcde')\n",
+    "m2 = MyClass('fghij')\n",
+    "\n",
+    "m1 + m2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
