--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1395,16 +1395,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.MyClass at 0x112885790>"
+       "Person with self.x='abcdefghij'"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,6 +1434,10 @@
     "    def __add__(self, other):\n",
     "        if hasattr(other, 'x'):\n",
     "            return MyClass(self.x + other.x)\n",
+    "        return MyClass(self.x + str(other))\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'Person with {self.x=}'\n",
     "        \n",
     "m1 = MyClass('abcde')\n",
     "m2 = MyClass('fghij')\n",
@@ -1443,10 +1447,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Person with self.x='abcde100'"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 + 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other methods for operators:\n",
+    "\n",
+    "- `+` -- `__add__`\n",
+    "- `-` -- `__sub__`\n",
+    "- `*` -- `__mul__`\n",
+    "- `/` -- `__truediv__`\n",
+    "- `//` -- `__floordiv__`\n",
+    "- `**` -- `__exp__`\n",
+    "- `%` -- `"
+   ]
   }
  ],
  "metadata": {
