--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1436,6 +1436,13 @@
     "            return MyClass(self.x + other.x)\n",
     "        return MyClass(self.x + str(other))\n",
     "\n",
+    "    def __radd__(self, other):   # reverse add!\n",
+    "        if hasattr(other, 'x'):\n",
+    "            return MyClass(self.x + other.x)\n",
+    "        return MyClass(self.x + str(other))\n",
+    "\n",
+    "    \n",
+    "\n",
     "    def __repr__(self):\n",
     "        return f'Person with {self.x=}'\n",
     "        \n",
@@ -1477,8 +1484,76 @@
     "- `/` -- `__truediv__`\n",
     "- `//` -- `__floordiv__`\n",
     "- `**` -- `__exp__`\n",
-    "- `%` -- `"
+    "- `%` -- `__mod__`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 40, 50, 60]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[10, 20, 30] + [40, 50, 60]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Person with self.x='abcde100'"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 + 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'MyClass'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[120], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;241;43m100\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mm1\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'MyClass'"
+     ]
+    }
+   ],
+   "source": [
+    "100 + m1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
